make sure that the active link is somehow visible

--- a/resources/scss/components/navigation/primary/_index.scss
+++ b/resources/scss/components/navigation/primary/_index.scss
@@ -291,9 +291,8 @@
                     text-decoration: none;
 
                     &.active {
+                        border-bottom: 0.125rem solid #000000;
                         color: #000000;
-                        pointer-events: none;
-                        cursor: default;
                     }
                 }
             }
